--- a/AKChat/app/src/main/res/layout/activity_chat.xml
+++ b/AKChat/app/src/main/res/layout/activity_chat.xml
@@ -15,7 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/main_app_sidebar"
-        android:layout_above="@+id/chat_add_button">
+        android:layout_above="@+id/chat_textbox"
+        android:background="#ffffff"
+        android:dividerHeight="5dp">
 
     </ListView>
 
