--- a/AKChat/app/src/main/res/layout/chat_single_message.xml
+++ b/AKChat/app/src/main/res/layout/chat_single_message.xml
@@ -6,29 +6,29 @@
         android:id="@+id/chat_friend_profile"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_margin="12dp"
+        android:layout_marginLeft="12dp"
         android:src="@drawable/default_avatar"/>
     <TextView
         android:id="@+id/message_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/chat_friend_profile"
-        android:maxWidth="@android:dimen/thumbnail_width"
-        android:layout_margin="12dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:textSize="16sp"/>
+        android:maxWidth="250dp"
+        android:layout_marginLeft="12dp"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:textSize="14sp"/>
     <!--//nhung cai thay doi la mau nen, mau chu, align right or left -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/chat_friend_seen"
         android:layout_below="@+id/message_textview"
-        android:layout_alignParentRight="true"
         android:visibility="gone"
-        android:layout_margin="12dp"
+        android:layout_marginTop="12dp"
+        android:text="seen"
         android:textSize="12sp"/>
 
 </RelativeLayout>
