--- a/AKChat/app/src/main/res/layout/chat_single_message.xml
+++ b/AKChat/app/src/main/res/layout/chat_single_message.xml
@@ -20,6 +20,18 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:textSize="14sp"/>
+    <ImageView
+        android:id="@+id/message_imageview"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_toEndOf="@+id/chat_friend_profile"
+        android:maxWidth="250dp"
+        android:layout_marginLeft="12dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:visibility="gone"/>
     <!--//nhung cai thay doi la mau nen, mau chu, align right or left -->
     <TextView
         android:layout_width="wrap_content"
